--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ psycopg2-binary==2.9.9
 python-dotenv==1.0.0
 gunicorn==21.2.0
 flask-cors==4.0.0
+Flask-Login==0.6.3
 werkzeug==2.0.3
+bcrypt==4.1.2
