--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,13 @@ DB_PASSWORD=postgres
 DB_HOST=localhost
 DB_PORT=5432
 
-# For production on Render, use the provided DATABASE_URL
-# DATABASE_URL=postgres://user:password@host:port/dbname
+# Flask application entry point
+FLASK_APP=backend/server.py
+
+# Database connection string
+DATABASE_URL=postgresql://username:password@localhost/dbname
+
+# Secret key for session management
+SECRET_KEY=your-secret-key
+
+DATABASE_URL=postgresql://grocery_store_18ec_user:JhC7r8dc959vtGdUprCEJPatiMIDdrHu@dpg-ct7apsbtq21c73blhkm0-a/grocery_store_18ec
