--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Database Configuration
 DB_NAME=grocery_store
 DB_USER=postgres
 DB_PASSWORD=postgres
@@ -8,9 +9,7 @@ DB_PORT=5432
 FLASK_APP=backend/server.py
 
 # Database connection string
-DATABASE_URL=postgresql://username:password@localhost/dbname
+DATABASE_URL=postgresql://grocery_store_grrk_user:BQ9vh6jEoEFEp3ihBVPJt30POHJQ7pyL@dpg-ct8oli2j1k6c73e9l3lg-a/grocery_store_grrk
 
 # Secret key for session management
-SECRET_KEY=your-secret-key
-
-DATABASE_URL=postgresql://grocery_store_18ec_user:JhC7r8dc959vtGdUprCEJPatiMIDdrHu@dpg-ct7apsbtq21c73blhkm0-a/grocery_store_18ec
+SECRET_KEY=889a29622b84dd006f16d28c65b09555d0875d2a948b1104
